fix filter add contrast css

--- a/static/deps/css/my_css.css
+++ b/static/deps/css/my_css.css
@@ -62,3 +62,12 @@ body {
   background-color: #3d0fd6; 
   color: #ddd; 
 }
+
+.text-background {
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 10px; 
+  color: white;
+  margin-top: 30px; 
+  padding: 20px; 
+}
